Added application files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<html>
-  <head>
-    <title>Semin Musić</title>
-  </head>
-  <body>
-    <div>
-      <h1 style="color:red">Demo Angular App</h1>
-    </div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Angular 6 - The Complete Guide - Course Project</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.f0bb86e94133d0d475b9.bundle.css" rel="stylesheet"/></head><body><sema-root></sema-root><script type="text/javascript" src="inline.b24109ad7b9f7bc9e331.bundle.js"></script><script type="text/javascript" src="polyfills.844825c855bc8ee42bcc.bundle.js"></script><script type="text/javascript" src="main.d10cd733b8de1efca395.bundle.js"></script></body></html>
