--- a/index.html
+++ b/index.html
@@ -5,4 +5,18 @@
     <title>Angular 6 - The Complete Guide - Course Project</title>
     <base href="/">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"><link href="styles.f0bb86e94133d0d475b9.bundle.css" rel="stylesheet"/></head><body><sema-root></sema-root><script type="text/javascript" src="inline.b24109ad7b9f7bc9e331.bundle.js"></script><script type="text/javascript" src="polyfills.844825c855bc8ee42bcc.bundle.js"></script><script type="text/javascript" src="main.d10cd733b8de1efca395.bundle.js"></script></body></html>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link href="styles.f0bb86e94133d0d475b9.bundle.css" rel="stylesheet"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102853856-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-102853856-2');
+    </script>
+  </head>
+  <body>
+    <sema-root></sema-root><script type="text/javascript" src="inline.b24109ad7b9f7bc9e331.bundle.js"></script><script type="text/javascript" src="polyfills.844825c855bc8ee42bcc.bundle.js"></script><script type="text/javascript" src="main.d10cd733b8de1efca395.bundle.js"></script>
+  </body>
+</html>
