--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </script>
   </head>
   <body>
-    <sema-root></sema-root><script type="text/javascript" src="inline.b24109ad7b9f7bc9e331.bundle.js"></script><script type="text/javascript" src="polyfills.844825c855bc8ee42bcc.bundle.js"></script><script type="text/javascript" src="main.d10cd733b8de1efca395.bundle.js"></script>
+    <sema-root></sema-root>
+    <script type="text/javascript" src="inline.b24109ad7b9f7bc9e331.bundle.js"></script>
+    <script type="text/javascript" src="polyfills.844825c855bc8ee42bcc.bundle.js"></script>
+    <script type="text/javascript" src="main.d10cd733b8de1efca395.bundle.js"></script>
   </body>
 </html>
